crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__gen_label.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
generate g_loop
```


---

in `top` from [feature.v](<feature.v#L28>)
