crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__generate_ref.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(info)
---
Generate block `g_loop`

```systemverilog
generate g_loop
```


---

Facts
- Scope: `top`
- Source: [feature.v](<feature.v>) line 28
