crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__instance_ref.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
instance u_child of child

module child (
    input wire logic a,
    output wire logic y
)
```


---

in `top` from [feature.v](<feature.v#L16>)
