crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__module_ref.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
module child (
    input wire logic a,
    output wire logic y
)
```


---

from [feature.v](<feature.v#L2>)
