crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__sig_ref.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 3213
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
logic
```
