crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_covers_all_definition_kinds__task_ref.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
task do_task()
```


---

in `top` from [feature.v](<feature.v#L19>)
